# minimal-provider-representative-agent

./: .env.template  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py  containers.py  enums.py  market_scan.py  solve_instances.py
src/agents/: __init__.py  aider.py  aider_modify_repo.py  code_review.py  open_hands.py  prompt_cache.py  raaid.Dockerfile  raaid.py
src/utils/: __init__.py  agent_market.py  git.py
