[tool.poetry]
name = "minimal-provider-agent-market"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
httpx = "0.27.2"
loguru = "^0.7.3"
pydantic = "2.10.3"
pydantic-settings = "^2.7.1"
pre-commit = "^4.0.1"
pygithub = "^2.5.0"
python-dotenv = "^1.0.1"
ruff = "^0.8.4"
docker = "^7.1.0"
openai = "1.57.0"
gitpython = "^3.1.43"

[tool.poetry.group.raaid]
optional = true

[tool.poetry.group.raaid.dependencies]
ra-aid = "^0.11.3"
python = ">=3.11,<3.12"

[tool.poetry.group.aider]
optional = true

[tool.poetry.group.aider.dependencies]
aider-chat = "^0.70.0"
python = ">=3.11,<3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
